# amcl-app

./: .gitignore  .prettierignore  LICENSE  README.md  README_EN.md  bun.lockb  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  snapshot.yml
scripts/: setup-artifact.ps1  setup-artifact.sh
src/: App.vue  global.ts  main.ts  router.ts  store.ts
src-tauri/: Cargo.toml  amcl.rc  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: data.ts  global.ts  index.ts
src/app/config/: index.ts
src/app/core/auth/: index.ts  microsoft.ts  minecraft.ts
src/app/event/: index.ts
src/app/global/: app.ts  config.ts  index.ts  os.ts  path.ts  types.ts  vue.ts
src/app/utils/: fs.ts  index.ts  java.ts  request.ts  shell.ts
src/components/: GlobalToolbar.vue  ToolBar.vue
src/global/: index.ts
src/icons/: index.ts
src/locales/: en-US.yaml  index.ts  zh-CN.yaml
src/router/: index.ts
src/stoere/: index.ts
src/store/: app.ts  config.ts  index.ts
src/styles/: fonts.scss  index.scss
src/theme/: generator.ts  index.ts
src/utils/: common.ts  icons.ts  index.ts  logger.ts  minecraft.ts  setup.ts
src/views/: HomeView.vue  IndexView.vue  SettingsView.vue  WelcomeView.vue
src/views/home/: index.vue
src/views/home/components/: HomeAside.vue  HomeTips.vue
src/views/index/: index.vue
src/views/settings/: index.vue
src/views/settings/components/: SettingsAbout.vue  SettingsAppearance.vue  SettingsDownload.vue  SettingsGeneral.vue  SettingsLaunch.vue
