[package]
name = "amcl-app"
version = "1.0.0"
description = "Armoe Minecraft Launcher"
authors = ["ZhenXin"]
license = "GPL-3.0"
repository = "https://github.com/armoe-project/amcl-app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-all", "http-all", "os-all", "window-close", "window-minimize", "window-set-decorations", "window-start-dragging"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
