[package]
authors = ["ZhenXin"]
description = "Armoe Minecraft Launcher"
edition = "2021"
license = "GPL-3.0"
name = "amcl-app"
repository = "https://github.com/armoe-project/amcl-app"
rust-version = "1.57"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.4", features = [] }

[dependencies]
open = "3.2.0"
tauri = {version = "1.4", features = ["clipboard-all", "devtools", "dialog-open", "fs-all", "http-request", "os-all", "path-all", "protocol-asset", "shell-execute", "shell-open", "window-close", "window-minimize", "window-set-decorations", "window-start-dragging"] }
window-shadows = "0.2.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
